--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
       </style>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-1P7QQKP7F7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-1P7QQKP7F7');
+</script>
   </head>
   <body>
     <div id="root"></div>
